fixed tests on mobile

--- a/static/Style.css
+++ b/static/Style.css
@@ -5,7 +5,10 @@
  --input-shadow: inset 0 1px 1px 1px rgba(255, 255, 255, 0.3), 0 2px 4px 0 rgba(0,0,0,.15), 0 1px 1.5px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.2), 0 0 0 0 transparent;
  --bs-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
-
+.row{
+	margin-left: auto;
+	margin-right: auto;
+}
 body {
 		font-family: var(--bs-sans-serif);
         margin: 0;
